--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -286,5 +286,14 @@
     <string name="proximos_eventos">PROXIMOS EVENTOS</string>
     <string name="recientes">RECIENTES</string>
     <string name="contraseña">Contraseña</string>
+    <string name="title_activity_nuevo_archivo">NuevoArchivo</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
 </resources>
